--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Natural Deduction Editor</title>
-    <!-- This style is crusial for the application -->
-    <style>
-        * {
-            padding: 0px;
-            margin: 0px;
-        }
-    </style>
-</head>
-<body>
-    <script type="module" src="/src/index.js"/>
-    </script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title> Natural Deduction </title>
+        <link rel="stylesheet" href="/css/styles.css">
+    </head>
+
+    <body>
+        <script type="module" src="/src/index.js"/></script>
+    </body>
 </html>
